--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -927,3 +927,32 @@ span.pr-grid-publications-vs {
     margin: 1px;
     display: inline-block;
 }
+
+
+.mce-sortable-images .mce-sortable-images {
+    background-color: #0c65a5;
+}
+
+.mce-sortable-images .ul-sortable-images {
+    height: 300px;
+    overflow: auto;
+}
+
+.mce-sortable-images .ul-sortable-images li {
+    margin: 5px;
+}
+
+.mce-sortable-images .ul-sortable-images li img {
+    width: 4em;
+    height: 2.2em;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: ns-resize;
+}
+
+.mce-sortable-images .ul-sortable-images li>* {
+    margin: 3px;
+}
+/*.mce-sortable-images>div {position: relative}*/
+/*.mce-sortable-images>div .mce-sortable-images-row {margin: 5px; height: 2em;}*/
