--- a/profapp/templates/article/edit.html
+++ b/profapp/templates/article/edit.html
@@ -66,7 +66,7 @@
                 return resp;
             };
 
-            var tinyArticleOptions = {'height': '500px', 'body_class': 'article-content'}
+            var tinyArticleOptions = {'height': '500px', 'body_class': 'article-content', 'image_list': true}
 
 
             {% if publication_id %}
@@ -87,6 +87,9 @@
             tinyArticleOptions['pr_formats'] = _.size(custom_formats) ? get_array_for_menu_build(custom_formats) : [];
 
             $scope.tinymceImageOptions = $.extend(true, $scope.tinymceImageOptions, tinyArticleOptions);
+            $scope.tinymceImageOptions['plugins'] += ' gallery';
+            $scope.tinymceImageOptions['toolbar1'] += ' gallery';
+            console.log($scope.tinymceImageOptions);
 
         }]);
 
