--- a/profapp/templates/article/edit.html
+++ b/profapp/templates/article/edit.html
@@ -32,8 +32,10 @@
                 else {
                     $scope.data['material']['illustration'] = resp['material']['illustration'];
                     add_message($scope._('material was saved'), 'success', 3000);
-                    window.location.href = {{ raw_url_for('article.material_details')|safe}}({company_id: resp.material.company_id,
-                        material_id: resp.material.id})
+                    window.location.href = {{ raw_url_for('article.material_details')|safe}}({
+                        company_id: resp.material.company_id,
+                        material_id: resp.material.id
+                    })
                 }
             };
 
@@ -61,36 +63,36 @@
                 if (typeof resp === 'string') {
                     location.href = '/';
                     add_message(resp, 'warning', 2000);
-                    console.log(resp)
                 }
                 return resp;
             };
-
-            var tinyArticleOptions = {'height': '500px', 'body_class': 'article-content', 'image_list': true}
-
+            $scope.tinyArticleOptions = $.extend(true, $scope.tinymceDefaultOptions);
 
             {% if publication_id %}
                 var custom_formats = {{ tinymce_format_groups('birdy')|tojson }};
-                tinyArticleOptions['toolbar2'] = 'foreground | background | font | border | margin | padding';
+                tinymceExtendSettings($scope.tinyArticleOptions, 'foreground | background | font | border | margin | padding', 'toolbar2', ' | ');
             {% else %}
                 var custom_formats = {};
             {% endif %}
 
-            tinyArticleOptions['formats'] =
-                    _.chain($.extend({}, {{ tinymce_format_groups()|tojson }}, custom_formats)).// here we have dict in form {group_label: {format: format_properties}}
-                    reduce(_.extend, {}).// flatten groups
-                    map(function (format_properties, format_name) { // convert each format to tinymce in flat dictionary
-                        return [format_name, convert_python_format_to_tinymce_format(format_properties)]; // form list of [key, val] pairs
-                    }).object().// convert each [key, val] pair to {key: val} element
-                    value(); // get result
+            var formats =
+                _.chain($.extend({}, {{ tinymce_format_groups()|tojson }}, custom_formats)).// here we have dict in form {group_label: {format: format_properties}}
+                reduce(_.extend, {}).// flatten groups
+                map(function (format_properties, format_name) { // convert each format to tinymce in flat dictionary
+                    return [format_name, convert_python_format_to_tinymce_format(format_properties)]; // form list of [key, val] pairs
+                }).object().// convert each [key, val] pair to {key: val} element
+                value(); // get result
 
-            tinyArticleOptions['pr_formats'] = _.size(custom_formats) ? get_array_for_menu_build(custom_formats) : [];
+            tinymceExtendSettings($scope.tinyArticleOptions, {
+                height: '500px', body_class: 'article-content', image_list: true,
+                formats: formats,
+                pr_formats: _.size(custom_formats) ? get_array_for_menu_build(custom_formats) : []
+            });
 
-            $scope.tinymceImageOptions = $.extend(true, $scope.tinymceImageOptions, tinyArticleOptions);
-            $scope.tinymceImageOptions['plugins'] += ' gallery';
-            $scope.tinymceImageOptions['toolbar1'] += ' gallery';
-            console.log($scope.tinymceImageOptions);
-
+            tinymceExtendSettings($scope.tinyArticleOptions, 'gallery', 'plugins', ' ');
+            tinymceExtendSettings($scope.tinyArticleOptions, 'gallery', 'toolbar1', ' ');
+            tinymceExtendSettings($scope.tinyArticleOptions, 'primagegallery', 'custom_elements', ',');
+            tinymceExtendSettings($scope.tinyArticleOptions, 'primagegallery[*]', 'valid_elements', ',');
         }]);
 
     </script>
@@ -126,8 +128,9 @@
                     </div>
 
                     {{ _('Article subtitle') }}
-                    <pr_help_tooltip>article_subtitle</pr_help_tooltip> <span
-                        af-validation-answer="data_validation:subtitle"></span>
+                    <pr_help_tooltip>article_subtitle</pr_help_tooltip>
+                    <span
+                            af-validation-answer="data_validation:subtitle"></span>
                     <input class="form-control article-edit-input" type="text" ng-model="data.material.subtitle">
 
                     {{ _('Keywords') }}
@@ -162,8 +165,8 @@
                               ng-model="data.material.short"></textarea>
 
                     {{ _('Full text') }}
-            <textarea ui-tinymce="tinymceImageOptions"
-                      ng-model="data.material.long"></textarea>
+                    <textarea ui-tinymce="tinyArticleOptions"
+                              ng-model="data.material.long"></textarea>
                 </div>
 
 
