--- a/profapp/static/css/article.css
+++ b/profapp/static/css/article.css
@@ -37,7 +37,7 @@ body.article-content {
     background-color: white;
   }
 
-image-gallery.image-gallery-tinymce-preview {
+.image-gallery-tinymce-preview {
     background-color: #00c853;
     min-width: 2em;
     min-height: 2em;
@@ -48,5 +48,11 @@ image-gallery.image-gallery-tinymce-preview {
 }
 
 image-gallery {
+
+}
+
+.mce-item-table {
+    min-width: 2em;
+    min-height: 2em;
 
 }
